automatic project update for v7.9.4